# randify

./: .gitignore  LICENSE.md  README.md  playground.py  pyproject.toml
PDFtimate/: RandomVariable.py  __init__.py  plotPDF.py  randify.py
docs/: index.html  randify.html  search.js
docs/randify/: RandomVariable.html  randify.html
examples/: election_poll.ipynb  extrapolation.ipynb  train_travel_time.ipynb
randify/: RandomVariable.py  __init__.py  plot.py  plotPDF.py  randify.py  utils.py
tests/: test_all.py
