[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 61.0", "wheel"]

[project]
name = "randify"
requires-python = ">=3.8"
version = "0.1.0"
authors = [{name = "Jonas Nebl", email = "jonas.nebl@tum.de"}]
license = {file = "LICENSE.md"}
description = "Simple probability density function estimation for existing code"
keywords = ["montecarlo", "random"]

dependencies = [
  "numpy",
  "matplotlib"
]

test = [
    "pytest"
]

[tool.pytest.ini_options]
testpaths = "tests"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[tool.setuptools]
packages = [
    "randify"
]
include-package-data = false

[tool.ruff]
target-version = "py37"
line-length = 100

[tool.ruff.lint]
select = [
    "B", # flake8-bugbear
    "W292", # empty line at end of file
]

ignore = [
]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"